2024-11-22T00:39:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11964205722 # 664
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-22
* notice: last 14d: unq all: 15 52
* notice: prev accum: outdated-unq outdated-all / unq all: 879 4738 / 896 4797
* notice: next accum: outdated-unq outdated-all / unq all: 881 4745 / 896 4797
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-07] / []

2024-11-21T12:14:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11952989907 # 663
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-21
* notice: last 14d: unq all: 16 53
* notice: prev accum: outdated-unq outdated-all / unq all: 879 4738 / 895 4787
* notice: next accum: outdated-unq outdated-all / unq all: 879 4738 / 896 4797
* notice: prev exec diff / last date diff / accum: unq all: +1 +10 -1 -6 / +1 +10 -0 -0 / 1 10
* notice: removed / changed dates: [] / [2024-11-07 2024-11-21]

2024-11-21T00:38:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11944302373 # 662
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-21
* notice: last 14d: unq all: 16 49
* notice: prev accum: outdated-unq outdated-all / unq all: 879 4738 / 893 4784
* notice: next accum: outdated-unq outdated-all / unq all: 879 4738 / 895 4787
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +4 +12 -0 -0 / 4 12
* notice: removed / changed dates: [] / [2024-11-20]

2024-11-20T12:14:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11933160737 # 661