@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-11-22T00:39:27Z",
-  "count_outdated" : 4745,
-  "uniques_outdated" : 881,
+  "timestamp" : "2024-11-22T12:14:25Z",
+  "count_outdated" : 4748,
+  "uniques_outdated" : 882,
   "count" : 4797,
   "uniques" : 896,
   "views" : [
-    {
-      "timestamp": "2024-11-08T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-11-10T00:00:00Z",
       "count": 2,
