@@ -1,12 +1,7 @@
 {
-  "count": 52,
-  "uniques": 15,
+  "count": 49,
+  "uniques": 14,
   "views": [
-    {
-      "timestamp": "2024-11-08T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-11-10T00:00:00Z",
       "count": 2,
