@@ -1,3 +1,12 @@
+2024-11-22T12:14:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11972363583 # 665
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-22
+* notice: last 14d: unq all: 14 49
+* notice: prev accum: outdated-unq outdated-all / unq all: 881 4745 / 896 4797
+* notice: next accum: outdated-unq outdated-all / unq all: 882 4748 / 896 4797
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-11-08] / []
+
 2024-11-22T00:39:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11964205722 # 664
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-22
